= Change Log

All notable changes to this project will be documented in this file. This change log follows the conventions of http://keepachangelog.com/[keepachangelog.com].

== Unreleased (dev)

== 0.3.0 (2020-05-15)
// {{{
=== Added
* https://github.com/liquidz/dad/issues/21[#21]: Added nREPL support.
** Heavily powered by https://github.com/babashka/babashka.nrepl[babashka.nrepl].
** Added `--nrepl` and `--port` option.

=== Changed
- Bump outdated dependencies.

// }}}

== 0.2.4 (2020-02-16)
// {{{
=== Added
- https://github.com/liquidz/dad/issues/18[#18]: Add meta data to each resource functions.

=== Fixed
- https://github.com/liquidz/dad/issues/17[#17]: Command line specified file is not evaluated in REPL mode.

// }}}

== 0.2.3 (2020-01-31)
// {{{
=== Added
- https://github.com/liquidz/dad/issues/14[#14]: Added pre condition to `link` resource.
- https://github.com/liquidz/dad/issues/15[#15]: Added pre condition to `git-checkout` resource.

=== Changed
- Bump dependent libraries.
// }}}

== 0.2.2 (2020-01-19)
// {{{
=== Changed
- https://github.com/liquidz/dad/issues/12[#12]: Bump GraalVM to 19.3.1.

=== Fixed
- Fixed REPL evaluation for muti-line codes.
// }}}

== 0.2.1 (2019-12-21)
// {{{
=== Fixed
- Fixed typo in `(dad/doc)`.
// }}}

== 0.2.0 (2019-12-21)
// {{{
=== Added
- https://github.com/liquidz/dad/issues/5[#5]: Added `dad/expand` built-in function to expand map values to string.
- Added REPL mode.

=== Changed
- https://github.com/liquidz/dad/issues/8[#8]: Update `template` resource to verify the content is same or not.
- (BREAKING) Rename `dad` specific built-in functions to use `dad` namespace.
** `env` -> `dad/env`
** `file-exists?` -> `dad/file-exists?`
** `os-type` -> `dad/os-type`

=== Fixed
- Fixed `file` resource to do `chmod`, `chown` and `chgrp` even if the file exists.
- Fixed `directory` resource to do `chmod`, `chown` and `chgrp` even if the directory exists.